--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://www.centrodecompra.com https://minha-api-produtos.onrender.com https://res.cloudinary.com data:; connect-src 'self' https://minha-api-produtos.onrender.com https://ep1.adtrafficquality.google; frame-src 'self' https://googleads.g.doubleclick.net;">
   <title>Centro de Compra - Ofertas Online</title>
   <meta name="description" content="As melhores ofertas de lojas online em um só lugar. Filtre por categoria, loja ou busque produtos com descontos!" />
   <meta name="keywords" content="e-commerce, compras online, ofertas, descontos, lojas" />
@@ -11,7 +12,6 @@
   <meta property="og:description" content="Encontre as melhores ofertas de lojas confiáveis em um só lugar." />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google; style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline'; font-src 'self' https://cdnjs.cloudflare.com; img-src 'self' https://www.centrodecompra.com https://minha-api-produtos.onrender.com; connect-src 'self' https://minha-api-produtos.onrender.com https://ep1.adtrafficquality.google; frame-src 'self' https://googleads.g.doubleclick.net;">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css" />
@@ -29,6 +29,7 @@
     <div class="header-top">
       <div class="container">
         <div class="header-info">
+          <span><i class="fas fa-phone-alt"></i> (21) 99812-3073</span>
           <span><i class="fas fa-envelope"></i> centrodecompracontato@gmail.com</span>
         </div>
         <div class="header-links">
@@ -42,18 +43,6 @@
         </div>
       </div>
     </div>
-    <!-- Banner Ad no Topo -->
-    <div class="ad-container">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
-        <p>Anúncio não disponível no momento.</p>
-      </div>
-    </div>
     <div class="header-main">
       <div class="container header-content">
         <h1 class="site-title">Centro de Compra</h1>
@@ -61,9 +50,6 @@
           <div class="search-container">
             <input type="text" id="busca" class="search-input" placeholder="Busque produtos ou lojas..." aria-label="Pesquisar produtos" />
             <button class="search-btn" aria-label="Iniciar busca"><i class="fas fa-search"></i></button>
-            <noscript>
-              <p>Por favor, ative o JavaScript para usar a busca.</p>
-            </noscript>
           </div>
         </div>
         <div class="header-actions">
@@ -85,29 +71,27 @@
     </nav>
   </header>
   <aside class="categories-sidebar" id="categories-sidebar" role="navigation" aria-label="Menu de categorias">
-    <nav>
-      <div class="sidebar-header">
-        <h3><i class="fas fa-list"></i> Categorias</h3>
-        <button class="close-sidebar" id="close-sidebar" aria-label="Fechar menu de categorias"><i class="fas fa-times"></i></button>
-      </div>
-      <ul class="categories-list">
-        <li class="category-item active" data-categoria="todas" aria-label="Filtrar por todas as categorias"><i class="fas fa-th"></i> Todas</li>
-        <li class="category-item" data-categoria="eletronicos" aria-label="Filtrar por eletrônicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
-        <li class="category-item" data-categoria="moda" aria-label="Filtrar por moda"><i class="fas fa-tshirt"></i> Moda</li>
-        <li class="category-item" data-categoria="casa-e-decoracao" aria-label="Filtrar por casa e decoração"><i class="fas fa-home"></i> Casa e Decoração</li>
-        <li class="category-item" data-categoria="esportes" aria-label="Filtrar por esportes"><i class="fas fa-futbol"></i> Esportes</li>
-        <li class="category-item" data-categoria="beleza" aria-label="Filtrar por beleza"><i class="fas fa-spa"></i> Beleza</li>
-        <li class="category-item" data-categoria="livros" aria-label="Filtrar por livros"><i class="fas fa-book"></i> Livros</li>
-        <li class="category-item" data-categoria="brinquedos" aria-label="Filtrar por brinquedos"><i class="fas fa-gamepad"></i> Brinquedos</li>
-        <li class="category-item" data-categoria="saude" aria-label="Filtrar por saúde"><i class="fas fa-heartbeat"></i> Saúde</li>
-        <li class="category-item" data-categoria="automotivo" aria-label="Filtrar por automotivo"><i class="fas fa-car"></i> Automotivo</li>
-        <li class="category-item" data-categoria="alimentos" aria-label="Filtrar por alimentos"><i class="fas fa-utensils"></i> Alimentos</li>
-        <li class="category-item" data-categoria="pet-shop" aria-label="Filtrar por pet shop"><i class="fas fa-paw"></i> Pet Shop</li>
-        <li class="category-item" data-categoria="celulares" aria-label="Filtrar por celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
-        <li class="category-item" data-categoria="eletrodomesticos" aria-label="Filtrar por eletrodomésticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
-        <li class="category-item" data-categoria="infantil" aria-label="Filtrar por infantil"><i class="fas fa-baby"></i> Infantil</li>
-      </ul>
-    </nav>
+    <div class="sidebar-header">
+      <h3><i class="fas fa-list"></i> Categorias</h3>
+      <button class="close-sidebar" id="close-sidebar" aria-label="Fechar menu de categorias"><i class="fas fa-times"></i></button>
+    </div>
+    <ul class="categories-list">
+      <li class="category-item active" data-categoria="todas" aria-label="Filtrar por todas as categorias"><i class="fas fa-th"></i> Todas</li>
+      <li class="category-item" data-categoria="eletronicos" aria-label="Filtrar por eletrônicos"><i class="fas fa-laptop"></i> Eletrônicos</li>
+      <li class="category-item" data-categoria="moda" aria-label="Filtrar por moda"><i class="fas fa-tshirt"></i> Moda</li>
+      <li class="category-item" data-categoria="casa-e-decoracao" aria-label="Filtrar por casa e decoração"><i class="fas fa-home"></i> Casa e Decoração</li>
+      <li class="category-item" data-categoria="esportes" aria-label="Filtrar por esportes"><i class="fas fa-futbol"></i> Esportes</li>
+      <li class="category-item" data-categoria="beleza" aria-label="Filtrar por beleza"><i class="fas fa-spa"></i> Beleza</li>
+      <li class="category-item" data-categoria="livros" aria-label="Filtrar por livros"><i class="fas fa-book"></i> Livros</li>
+      <li class="category-item" data-categoria="brinquedos" aria-label="Filtrar por brinquedos"><i class="fas fa-gamepad"></i> Brinquedos</li>
+      <li class="category-item" data-categoria="saude" aria-label="Filtrar por saúde"><i class="fas fa-heartbeat"></i> Saúde</li>
+      <li class="category-item" data-categoria="automotivo" aria-label="Filtrar por automotivo"><i class="fas fa-car"></i> Automotivo</li>
+      <li class="category-item" data-categoria="alimentos" aria-label="Filtrar por alimentos"><i class="fas fa-utensils"></i> Alimentos</li>
+      <li class="category-item" data-categoria="pet-shop" aria-label="Filtrar por pet shop"><i class="fas fa-paw"></i> Pet Shop</li>
+      <li class="category-item" data-categoria="celulares" aria-label="Filtrar por celulares"><i class="fas fa-mobile-alt"></i> Celulares</li>
+      <li class="category-item" data-categoria="eletrodomesticos" aria-label="Filtrar por eletrodomésticos"><i class="fas fa-blender"></i> Eletrodomésticos</li>
+      <li class="category-item" data-categoria="infantil" aria-label="Filtrar por infantil"><i class="fas fa-baby"></i> Infantil</li>
+    </ul>
   </aside>
   <div class="overlay" id="overlay"></div>
   <main class="main-content">
@@ -119,18 +103,6 @@
         </div>
       </div>
     </section>
-    <!-- Banner Ad na Seção de Ofertas -->
-    <div class="ad-container">
-      <ins class="adsbygoogle"
-           style="display:block"
-           data-ad-client="ca-pub-9781903408224276"
-           data-ad-slot="YOUR_AD_SLOT_ID"
-           data-ad-format="auto"
-           data-full-width-responsive="true"></ins>
-      <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
-        <p>Anúncio não disponível no momento.</p>
-      </div>
-    </div>
     <section class="stores-section" id="lojas">
       <div class="container">
         <div class="section-header">
@@ -145,31 +117,31 @@
             <div class="store-name">Todas</div>
           </div>
           <div class="store-card" data-loja="amazon" data-tooltip="Líder em eletrônicos e livros">
-            <img src="logos/amazon.png" alt="Logotipo da Amazon" class="store-logo" loading="lazy" />
+            <img src="logos/amazon.png" alt="Amazon" class="store-logo" />
             <div class="store-name">Amazon</div>
           </div>
           <div class="store-card" data-loja="mercadolivre" data-tooltip="Marketplace com ampla variedade">
-            <img src="logos/mercadolivre.jpg" alt="Logotipo do Mercado Livre" class="store-logo" loading="lazy" />
+            <img src="logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" />
             <div class="store-name">Mercado Livre</div>
           </div>
           <div class="store-card" data-loja="shopee" data-tooltip="Ofertas em moda e acessórios">
-            <img src="logos/shopee.png" alt="Logotipo da Shopee" class="store-logo" loading="lazy" />
+            <img src="logos/shopee.png" alt="Shopee" class="store-logo" />
             <div class="store-name">Shopee</div>
           </div>
           <div class="store-card" data-loja="magalu" data-tooltip="Loja completa para casa e tecnologia">
-            <img src="logos/magalu.png" alt="Logotipo da Magalu" class="store-logo" loading="lazy" />
+            <img src="logos/magalu.png" alt="Magalu" class="store-logo" />
             <div class="store-name">Magalu</div>
           </div>
           <div class="store-card" data-loja="shein" data-tooltip="Moda acessível e variada">
-            <img src="logos/shein.png" alt="Logotipo da Shein" class="store-logo" loading="lazy" />
+            <img src="logos/shein.png" alt="Shein" class="store-logo" />
             <div class="store-name">Shein</div>
           </div>
           <div class="store-card" data-loja="alibaba" data-tooltip="Produtos direto da China">
-            <img src="logos/alibaba.png" alt="Logotipo da Alibaba" class="store-logo" loading="lazy" />
+            <img src="logos/alibaba.png" alt="Alibaba" class="store-logo" />
             <div class="store-name">Alibaba</div>
           </div>
           <div class="store-card" data-loja="aliexpress" data-tooltip="Ofertas internacionais com frete acessível">
-            <img src="logos/aliexpress.png" alt="Logotipo da AliExpress" class="store-logo" loading="lazy" />
+            <img src="logos/aliexpress.png" alt="AliExpress" class="store-logo" />
             <div class="store-name">AliExpress</div>
           </div>
         </div>
@@ -180,17 +152,16 @@
         <div class="section-header">
           <h2 id="ofertas-titulo">Produtos em Destaque</h2>
         </div>
-        <!-- Banner Ad na Seção de Produtos -->
-        <div class="ad-container">
+        <div class="ad-container" style="margin: 20px auto; text-align: center;">
           <ins class="adsbygoogle"
                style="display:block"
                data-ad-client="ca-pub-9781903408224276"
-               data-ad-slot="google.com, pub-9781903408224276, DIRECT, f08c47fec0942fa0"
+               data-ad-slot="1234567890" <!-- Substitua por seu ID real do AdSense -->
                data-ad-format="auto"
                data-full-width-responsive="true"></ins>
-          <div class="ad-fallback" style="display: none; text-align: center; font-size: 0.8rem; color: var(--text-secondary);">
-            <p>Anúncio não disponível no momento.</p>
-          </div>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
         </div>
         <div class="loading-container" id="loading-spinner">
           <div class="loading-spinner">
@@ -210,11 +181,7 @@
           <p>Não foi possível carregar os produtos.</p>
           <a href="#" class="btn-primary retry-load"><i class="fas fa-redo"></i> Tentar Novamente</a>
         </div>
-        <div class="products-grid" id="grid-produtos">
-          <noscript>
-            <p>Os produtos estão indisponíveis no momento. Ative o JavaScript para visualizá-los.</p>
-          </noscript>
-        </div>
+        <div class="products-grid" id="grid-produtos"></div>
         <div id="pagination-controls"></div>
         <div class="load-more-container">
           <button class="load-more-btn" id="load-more"><i class="fas fa-plus"></i> Ver Mais</button>
@@ -231,7 +198,7 @@
       <div class="footer-section">
         <h4>Links Úteis</h4>
         <ul>
-          <li><a href="sobre.html">Termos de Uso</a></li>
+          <li><a href="#termos">Termos de Uso</a></li>
           <li><a href="sobre.html">Política de Privacidade</a></li>
           <li><a href="faq.html">FAQ</a></li>
           <li><a href="contato.html">Suporte</a></li>
@@ -241,31 +208,31 @@
         <h4>Siga-nos</h4>
         <div class="social-links">
           <a href="https://www.instagram.com/cdccentrodecompra/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
-            <img src="logos/instagram.png" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/instagram.png" alt="Instagram" class="social-icon" />
           </a>
           <a href="https://x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
-            <img src="logos/X.png" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/X.png" alt="X" class="social-icon" />
           </a>
           <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
-            <img src="logos/youtube.png" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/youtube.png" alt="YouTube" class="social-icon" />
           </a>
           <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
-            <img src="logos/tiktok.png" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/tiktok.png" alt="TikTok" class="social-icon" />
           </a>
           <a href="https://t.me/+NYwkHFP3uX8yMzYx" class="social-link" aria-label="Telegram" target="_blank" rel="noopener">
-            <img src="logos/telegram.jpg" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/telegram.jpg" alt="Telegram" class="social-icon" />
           </a>
           <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
-            <img src="logos/kwai.png" alt="" class="social-icon" loading="lazy" />
+            <img src="logos/kwai.png" alt="Kwai" class="social-icon" />
           </a>
         </div>
       </div>
       <div class="footer-section">
         <h4>Formas de Pagamento</h4>
         <div class="payment-methods">
-          <img src="logos/visa.png" alt="Visa" class="payment-icon" loading="lazy" />
-          <img src="logos/mastercard.png" alt="Mastercard" class="payment-icon" loading="lazy" />
-          <img src="logos/boleto.png" alt="Boleto" class="payment-icon" loading="lazy" />
+          <img src="logos/visa.png" alt="Visa" class="payment-icon" />
+          <img src="logos/mastercard.png" alt="Mastercard" class="payment-icon" />
+          <img src="logos/boleto.png" alt="Boleto" class="payment-icon" />
         </div>
       </div>
     </div>
@@ -292,8 +259,8 @@
       </div>
     </div>
   </div>
-  <script defer src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
-  <script defer src="init.js"></script>
-  <script defer src="script.js"></script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+  <script src="init.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
