--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
-    script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google https://www.centrodecompra.com;
+    script-src 'self' 'unsafe-inline' https://pagead2.googlesyndication.com https://cdn.socket.io https://ep2.adtrafficquality.google https://www.centrodecompra.com https://www.google-analytics.com;
     style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com;
     font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
-    img-src 'self' data: https://www.centrodecompra.com https://minha-api-produtos.onrender.com https://res.cloudinary.com https://seusite.com;
+    img-src 'self' data: https://www.centrodecompra.com https://minha-api-produtos.onrender.com https://res.cloudinary.com https://via.placeholder.com;
     connect-src 'self' https://minha-api-produtos.onrender.com wss://minha-api-produtos.onrender.com https://ep1.adtrafficquality.google https://www.google-analytics.com;
     frame-src 'self' https://googleads.g.doubleclick.net https://ep2.adtrafficquality.google https://www.google.com;
     object-src 'none';
@@ -26,13 +26,13 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9781903408224276" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="icon" href="https://seusite.com/logos/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="16x16" href="https://seusite.com/logos/favicon-16x16.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://seusite.com/logos/favicon-32x32.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="https://seusite.com/logos/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="https://seusite.com/logos/android-chrome-192x192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="https://seusite.com/logos/android-chrome-512x512.png" />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" href="https://www.centrodecompra.com/logos/favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.centrodecompra.com/logos/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.centrodecompra.com/logos/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.centrodecompra.com/logos/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="https://www.centrodecompra.com/logos/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="https://www.centrodecompra.com/logos/android-chrome-512x512.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   <link rel="preload" href="style.css" as="style" />
 </head>
 <body>
@@ -127,31 +127,31 @@
             <div class="store-name">Todas</div>
           </div>
           <div class="store-card" data-loja="amazon" data-tooltip="Líder em eletrônicos e livros">
-            <img src="https://seusite.com/logos/amazon.png" alt="Amazon" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/amazon.png" alt="Amazon" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Amazon</div>
           </div>
           <div class="store-card" data-loja="mercadolivre" data-tooltip="Marketplace com ampla variedade">
-            <img src="https://seusite.com/logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/mercadolivre.jpg" alt="Mercado Livre" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Mercado Livre</div>
           </div>
           <div class="store-card" data-loja="shopee" data-tooltip="Ofertas em moda e acessórios">
-            <img src="https://seusite.com/logos/shopee.png" alt="Shopee" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/shopee.png" alt="Shopee" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Shopee</div>
           </div>
           <div class="store-card" data-loja="magalu" data-tooltip="Loja completa para casa e tecnologia">
-            <img src="https://seusite.com/logos/magalu.png" alt="Magalu" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/magalu.png" alt="Magalu" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Magalu</div>
           </div>
           <div class="store-card" data-loja="shein" data-tooltip="Moda acessível e variada">
-            <img src="https://seusite.com/logos/shein.png" alt="Shein" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/shein.png" alt="Shein" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Shein</div>
           </div>
           <div class="store-card" data-loja="alibaba" data-tooltip="Produtos direto da China">
-            <img src="https://seusite.com/logos/alibaba.png" alt="Alibaba" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/alibaba.png" alt="Alibaba" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">Alibaba</div>
           </div>
           <div class="store-card" data-loja="aliexpress" data-tooltip="Ofertas internacionais com frete acessível">
-            <img src="https://seusite.com/logos/aliexpress.png" alt="AliExpress" class="store-logo" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/aliexpress.png" alt="AliExpress" class="store-logo" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
             <div class="store-name">AliExpress</div>
           </div>
         </div>
@@ -213,28 +213,28 @@
         <h4>Siga-nos</h4>
         <div class="social-links">
           <a href="https://www.instagram.com/cdccentrodecompra/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener">
-            <img src="https://seusite.com/logos/instagram.png" alt="Instagram" class="social-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/instagram.png" alt="Instagram" class="social-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
           </a>
           <a href="https://x.com/ComprasCdc" class="social-link" aria-label="X" target="_blank" rel="noopener">
-            <img src="https://seusite.com/logos/X.png" alt="X" class="social-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/X.png" alt="X" class="social-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
           </a>
           <a href="https://www.youtube.com/@CentrodeComprasCdC" class="social-link" aria-label="YouTube" target="_blank" rel="noopener">
-            <img src="https://seusite.com/logos/youtube.png" alt="YouTube" class="social-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/youtube.png" alt="YouTube" class="social-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
           </a>
           <a href="https://www.tiktok.com/@cdc.centrodecompra?_t=ZM-8yz9x3HnhKQ&_r=1" class="social-link" aria-label="TikTok" target="_blank" rel="noopener">
-            <img src="https://seusite.com/logos/tiktok.png" alt="TikTok" class="social-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/tiktok.png" alt="TikTok" class="social-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
           </a>
           <a href="https://kwai-video.com/u/@centrodecompracdc/sApFCgvk" class="social-link" aria-label="Kwai" target="_blank" rel="noopener">
-            <img src="https://seusite.com/logos/kwai.png" alt="Kwai" class="social-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+            <img src="https://www.centrodecompra.com/logos/kwai.png" alt="Kwai" class="social-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
           </a>
         </div>
       </div>
       <div class="footer-section">
         <h4>Formas de Pagamento</h4>
         <div class="payment-methods">
-          <img src="https://seusite.com/logos/visa.png" alt="Visa" class="payment-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
-          <img src="https://seusite.com/logos/mastercard.png" alt="Mastercard" class="payment-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
-          <img src="https://seusite.com/logos/boleto.png" alt="Boleto" class="payment-icon" onerror="this.src='https://seusite.com/logos/placeholder.png'" />
+          <img src="https://www.centrodecompra.com/logos/visa.png" alt="Visa" class="payment-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
+          <img src="https://www.centrodecompra.com/logos/mastercard.png" alt="Mastercard" class="payment-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
+          <img src="https://www.centrodecompra.com/logos/boleto.png" alt="Boleto" class="payment-icon" onerror="this.src='https://via.placeholder.com/200?text=Placeholder'" />
         </div>
       </div>
     </div>
